--- a/src/styles/abstracts/_var-color.scss
+++ b/src/styles/abstracts/_var-color.scss
@@ -31,10 +31,10 @@ $m-color--grey-lightest: #f7f7f7 !default;
 // ======================================================================
 //  Success colors
 // ======================================================================
-$m-color--valid-dark: #14a555 !default;
-$m-color--valid: #13bf69 !default;
-$m-color--valid-light: #17c96b !default;
-$m-color--valid-lightest: #dcf9e9 !default;
+$m-color--success-dark: #14a555 !default;
+$m-color--success: #13bf69 !default;
+$m-color--success-light: #17c96b !default;
+$m-color--success-lightest: #dcf9e9 !default;
 
 // ======================================================================
 //  Warning colors
