--- a/src/components/status-list/status-list.scss
+++ b/src/components/status-list/status-list.scss
@@ -32,7 +32,7 @@ $m-status-list-line-width: 2px;
 
         &.m--is-completed {
             .m-icon {
-                color: $m-color--valid;
+                color: $m-color--success;
             }
         }
 
