--- a/src/mixins/base-window/base-window.scss
+++ b/src/mixins/base-window/base-window.scss
@@ -128,7 +128,7 @@ $m-dialog--header-height: $m-touch-size !default;
         }
 
         .m--from-right.m--is-open & {
-            transform: translate3d(0, 0, 0);
+            transform: translate3d(-100%, 0, 0);
         }
 
         .m--from-left & {
@@ -152,11 +152,8 @@ $m-dialog--header-height: $m-touch-size !default;
         }
 
         .m--is-dialog & {
-            position: relative;
             background: $m-color--black-grey;
             color: $m-color--white;
-            min-height: $m-dialog--header-height;
-            padding-right: $m-touch-size;
         }
 
         .m--is-sidebar & {
@@ -164,19 +161,34 @@ $m-dialog--header-height: $m-touch-size !default;
             border-bottom: 1px solid $m-color--grey-light;
         }
 
+        .m--is-dialog &,
+        .m--is-sidebar & {
+            position: relative;
+            min-height: $m-dialog--header-height;
+            padding-right: $m-touch-size;
+        }
+
         &__close-button {
             .m--is-dialog & {
-                position: absolute;
-                top: 50%;
-                right: 0;
-                margin: 0;
                 color: $m-color--white;
-                transform: translate3d(0, -50%, 0);
-                stroke-width: 2px;
 
                 &::after {
                     background: $m-color--black-grey-light;
                 }
+            }
+
+            .m--is-sidebar & {
+                color: $m-color--black-grey-light;
+            }
+
+            .m--is-dialog &,
+            .m--is-sidebar & {
+                position: absolute;
+                top: 50%;
+                right: 0;
+                margin: 0;
+                transform: translate3d(0, -50%, 0);
+                stroke-width: 2px;
             }
         }
     }
