--- a/src/mixins/base-window/base-window.scss
+++ b/src/mixins/base-window/base-window.scss
@@ -128,7 +128,7 @@ $m-dialog--header-height: $m-touch-size !default;
         }
 
         .m--from-right.m--is-open & {
-            transform: translate3d(-100%, 0, 0);
+            transform: translate3d(0, 0, 0);
         }
 
         .m--from-left & {
