--- a/src/components/radio/radio.html
+++ b/src/components/radio/radio.html
@@ -1,11 +1,22 @@
-<span class="m-radio">
+<li class="m-radio" :class="{ 'm--is-inline': propInline == true, 'm--is-radio-style': !isParentButtonGroup }" v-if="!isParentButtonGroup">
     <input class="m-radio__hidden" :value="value" type="radio" v-model="model" :id="radioID" :name="name"
            @focus="isFocus=true" @blur="isFocus=false" @click="onClick">
-    <label class="m-radio__wrap" :class="{ 'm--is-right': propPosition == 'right', 'm--is-focus': isFocus && model == value}"
-        :for="radioID" :aria-hidden="!propLabel">
+    <label class="m-radio__wrap" :class="{ 'm--is-right': propPosition == 'right', 'm--is-focus': isFocus }" :for="radioID">
         <span class="m-radio__input" :class="{ 'm--is-checked': model == value }" aria-hidden="true"></span>
-        <span class="m-radio__label" v-if="propLabel">
+        <span class="m-radio__label">
             <slot>Label</slot>
         </span>
     </label>
-</span>
+</li>
+<li class="m-radio" :class="{ 'm--is-button-style': isParentButtonGroup }" v-else-if="isParentButtonGroup">
+    <input class="m-radio__hidden" :value="value" type="radio" v-model="model" :id="radioID" :name="name"
+           @focus="isFocus=true" @blur="isFocus=false" @click="onClick">
+    <label class="m-radio__wrap" :class="{ 'm--is-right': propPosition == 'right', 'm--is-checked': model == value, 'm--is-focus': isFocus, 'm--is-first': firstChild == true, 'm--is-last': lastChild == true }" :for="radioID">
+        <span class="m-radio__label">
+            <m-icon aria-hidden="true" class="m-radio__icon m--is-left" :name="iconName" v-if="hasIconLeft  && icon"></m-icon>
+            <slot>Label</slot>
+            <m-icon aria-hidden="true" class="m-radio__icon m--is-right" :name="iconName"  v-if="!hasIconLeft  && icon"></m-icon>
+        </span>
+    </label>
+</li>
+
