--- a/src/components/step/step.html
+++ b/src/components/step/step.html
@@ -1,9 +1,11 @@
 <article class="m-step" :class="{'m--is-locked': state=='locked','m--is-in-progress': state=='in-progress','m--is-success': state=='success','m--is-warning': state=='warning','m--is-error': state=='error', 'm--is-open': propOpen, 'm--is-close': !propOpen, 'm--is-last': last}">
-    <header class="m-step__header" @click="openStep" tabindex="0">
-        <span class="m-step__header__icon">
-            <m-icon :name="iconName"></m-icon>
-            <span class="m-step__header__icon-badge">
-                <m-icon :name="getIcon()"></m-icon>
+    <header>
+        <a href="#" class="m-step__header" @click="openStep">
+            <span class="m-step__icon">
+                <m-icon :name="iconName"></m-icon>
+                <span class="m-step__icon__badge" v-if="state">
+                    <m-icon :name="getIcon()"></m-icon>
+                </span>
             </span>
         </span>
         <div class="m-step__header__title">
