--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -4,8 +4,8 @@
     </ul>
     <m-popper :options="{ placement: 'bottom' }"
               :close-on-content-click="!multiple"
-              :close-on-reference-click="false"
-              :disabled="isDisabled"
+              :close-on-reference-click="!propEditable"
+              :disabled="disabled"
               :open="propOpen"
               dialog-mode="panel"
               :enter="animEnter"
@@ -32,7 +32,7 @@
             ref="mDropdownElements"
             slot="body">
             <slot></slot>
-            <li v-if="elementsCount <= 0"
+            <li v-if="nbItems <= 0"
                 class="m-dropdown__list__element">
                 <span class="m-dropdown__list__element-text">
                     <m-i18n i18n-key="m-dropdown:no-result"></m-i18n>
@@ -44,10 +44,10 @@
         </template>
         <m-text-field ref="mDropdownValue"
                       :label="label"
-                      :value="textElement"
+                      :value="selectedText"
                       :state="propState"
-                      :editable="editable"
-                      :disabled="isDisabled"
+                      :editable="propEditable"
+                      :disabled="disabled"
                       :force-focus="propOpen"
                       :default-text="defaultText"
                       @valueChanged="filterDropdown($event)"
