--- a/src/components/content-list/content-list.scss
+++ b/src/components/content-list/content-list.scss
@@ -17,12 +17,7 @@
             margin: 0;
             padding: 0;
             list-style: none;
+            background-color: $m-color--white;
         }
-
-        // li {
-        //     border-bottom: 1px solid $m-color--grey-lighter;
-        //     padding: $m-padding;
-        //     position: relative;
-        // }
     }
 }
