--- a/src/components/dropdown-item/dropdown-item.scss
+++ b/src/components/dropdown-item/dropdown-item.scss
@@ -17,6 +17,7 @@ $m-dropdown--margin: $m-padding--xs !default;
     font-size: $m-font-size--l;
     text-decoration: none;
     outline: none;
+    word-break: break-all;
 
     &:not(.m--is-disabled) {
         &:hover {
