--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -30,12 +30,13 @@
         </template>
         <ul class="m-dropdown__list"
             ref="mDropdownElements"
-            slot="body">
+            slot="body"
+            :style="{ width: width }">
             <slot></slot>
             <li v-if="nbItems <= 0"
                 class="m-dropdown__list__element">
                 <span class="m-dropdown__list__element-text">
-                    <m-i18n i18n-key="m-dropdown:no-result"></m-i18n>
+                    {{ propTextNoData }}
                 </span>
             </li>
         </ul>
@@ -50,6 +51,7 @@
                       :disabled="disabled"
                       :force-focus="propOpen"
                       :default-text="defaultText"
+                      :style="{ width: width }"
                       @valueChanged="filterDropdown($event)"
                       @keyup="keyupReference">
         </m-text-field>
