Content list default value update

--- a/src/components/content-list-item/content-list-item.html
+++ b/src/components/content-list-item/content-list-item.html
@@ -3,7 +3,7 @@
     <li class="m-content-list-item" v-if="visible">
         <span>
             <slot>
-                <span>test de contenu d'une liste</span>
+                <p>This component is intended to be used as m-content-list component child.</p>
             </slot>
         </span>
         <span>
