--- a/src/components/content-list/content-list.html
+++ b/src/components/content-list/content-list.html
@@ -4,15 +4,9 @@
     </header>
     <ul class="m-content-list__body">
         <slot>
-            <li>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </li>
-            <li>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </li>
-            <li>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </li>
+            <p>
+                This component is intended to be used with m-content-list-item components as child component. A header slot is also available.
+            </p>
         </slot>
     </ul>
 </div>
