Quick fix to prevent native click on deleted item in content-list-item
+ update depreciated attribute in dropdown template

--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -21,7 +21,7 @@
                        v-model="textElement"
                        ref="researchInput">
                 <m-button mode="icon" icon-name="default" @click="focusOnResearchInput">
-                    <m-i18n i18n-key="m-dropdown:search"></m-i18n>
+                    <m-i18n k="m-dropdown:search"></m-i18n>
                 </m-button>
             </div>
         </template>
