Remove box-shadow in popper, add it in componant

--- a/src/components/datepicker/datepicker.scss
+++ b/src/components/datepicker/datepicker.scss
@@ -3,6 +3,8 @@ $m-datepicker--width: 300px !default;
 
 .m-datepicker {
     background: $m-color--white;
+    box-shadow: rgba($m-color--black, 0.3) 0 1px 3px 0;
+    overflow: hidden;
 
     @media (max-width: $m-bp--max--s) {
         width: 100%;
