--- a/src/components/tooltip/tooltip.html
+++ b/src/components/tooltip/tooltip.html
@@ -5,10 +5,9 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         <m-bullet-list title="Id enim eu ullamco" class="m-u--margin-top">
             <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-            <li>Sunt ad eu eiusmod esse mollit consectetur quis voluptate adipisicing irure.</li>
-            <li>Sunt proident elit elit irure do aliqua enim ex Lorem tempor velit fugiat proident amet.</li>
+            <li>Sunt ad eu eiusmod esse mollit consectetur quis voluptate irure.</li>
             <li>Aute consectetur esse sint voluptate.</li>
         </m-bullet-list>
-        <p>Consequat officia ipsum elit cupidatat reprehenderit veniam culpa consequat occaecat veniam labore eiusmod.</p>
+        <p>Consequat officia ipsum elit cupidatat reprehe ccaecat veniam labore eiusmod.</p>
     </div>
 </m-popper>
