--- a/src/components/tooltip/tooltip.scss
+++ b/src/components/tooltip/tooltip.scss
@@ -17,6 +17,8 @@ $m-tooltip--max-height: 280px !default;
     &__content {
         padding: $m-padding;
         background: $m-color--interactive-lightest;
+        box-shadow: rgba($m-color--black, 0.3) 0 1px 3px 0;
+        border-radius: $m-border-radius--s;
 
         @media (max-width: $m-bp--max--s) {
             position: relative;
