--- a/src/components/options-menu/options-menu.scss
+++ b/src/components/options-menu/options-menu.scss
@@ -4,4 +4,5 @@
     background-color: $m-color--white;
     display: table;
     width: 100%;
+    box-shadow: rgba($m-color--black, 0.3) 0 1px 3px 0;
 }
