--- a/src/components/timepicker/timepicker.scss
+++ b/src/components/timepicker/timepicker.scss
@@ -10,6 +10,7 @@ $m-timepicker--scroll-height: $m-touch-size * 5 !default;
         width: 210px;
         height: $m-timepicker--scroll-height + $m-touch-size;
         background: $m-color--white;
+        box-shadow: rgba($m-color--black, 0.3) 0 1px 3px 0;
     }
 
     &__body {
