--- a/src/components/tooltip/tooltip.scss
+++ b/src/components/tooltip/tooltip.scss
@@ -20,6 +20,23 @@ $m-tooltip--max-height: 280px !default;
         box-shadow: rgba($m-color--black, 0.3) 0 1px 3px 0;
         border-radius: $m-border-radius--s;
 
+        &.m--has-close-button {
+            padding-right: $m-padding--l;
+            position: relative;
+        }
+
+        &__close-button.m-button.m--is-icon {
+            position: absolute;
+            top: 0;
+            right: 0;
+            color: $m-color--interactive;
+
+            .m-button__icon .m-icon {
+                font-size: $m-font-size--xs;
+                height: $m-font-size--xs;
+            }
+        }
+
         @media (max-width: $m-bp--max--s) {
             position: relative;
 
