--- a/src/components/scroll-top/scroll-top.scss
+++ b/src/components/scroll-top/scroll-top.scss
@@ -5,23 +5,39 @@
     bottom: 60px;
     right: $m-padding--l;
     z-index: 999;
+    background-color: $m-color--black-grey-dark;
+    border-radius: $m-border-radius--s;
+    min-width: 28px;
+    min-height: 28px;
+    opacity: 0.3;
+    transition: 0.3s ease;
+    cursor: pointer;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
 
-    &.m-button.m--is-icon {
-        background-color: $m-color--black-grey-dark;
-        border-radius: $m-border-radius--s;
-        min-width: 28px;
-        min-height: 28px;
-        opacity: 0.3;
-        transition: 0.3s ease;
+    &:hover {
+        opacity: 1;
+    }
+
+    &:active,
+    &:focus {
+        outline: none;
+        opacity: 1;
+    }
+
+    .m-icon {
         color: $m-color--white;
         -webkit-transform: rotate(-90deg);
         -moz-transform: rotate(-90deg);
         -o-transform: rotate(-90deg);
         -ms-transform: rotate(-90deg);
         transform: rotate(-90deg);
+    }
 
-        &:hover {
-            opacity: 1;
-        }
+    &__hidden {
+        @include m-visually-hidden;
     }
 }
