--- a/src/components/button/button.html
+++ b/src/components/button/button.html
@@ -1,4 +1,4 @@
-<button class="m-button" :class="{ 'm--is-primary': propMode=='primary',
+<button class="m-button" :class="{ 'm--is-mode-primary': propMode=='primary',
               'm--is-secondary': propMode=='secondary',
               'm--is-icon': propMode=='icon',
               'm--is-selected': propState=='selected',
