--- a/src/components/tooltip/tooltip.scss
+++ b/src/components/tooltip/tooltip.scss
@@ -24,7 +24,7 @@ $m-tooltip--max-height: 280px !default;
     }
 
     &__icon {
-        transition: color 0.3s ease;
+        transition: color $m-transition ease;
         color: $m-color--interactive-light;
         cursor: pointer;
 
@@ -110,6 +110,7 @@ $m-tooltip--max-height: 280px !default;
         &-container {
             &.m--has-close-button {
                 position: relative;
+
                 .m-tooltip__body {
                     padding-right: $m-padding--l;
                 }
