--- a/src/components/tooltip/tooltip.scss
+++ b/src/components/tooltip/tooltip.scss
@@ -24,7 +24,7 @@ $m-tooltip--max-height: 280px !default;
     }
 
     &__icon {
-        transition: color $m-transition ease;
+        transition: color $m-transition-duration ease;
         color: $m-color--interactive-light;
         cursor: pointer;
 
