--- a/src/styles/abstracts/_var-transition.scss
+++ b/src/styles/abstracts/_var-transition.scss
@@ -1,5 +1,5 @@
-$m-transition--xl: 0.6s !default;
-$m-transition--l: 0.45s !default;
-$m-transition: 0.3s !default;
-$m-transition--s: 0.2s !default;
-$m-transition--xs: 0.1s !default;
+$m-transition-duration--xl: 0.6s !default;
+$m-transition-duration--l: 0.45s !default;
+$m-transition-duration: 0.3s !default;
+$m-transition-duration--s: 0.2s !default;
+$m-transition-duration--xs: 0.1s !default;
