--- a/src/components/dropdown-item/dropdown-item.scss
+++ b/src/components/dropdown-item/dropdown-item.scss
@@ -5,7 +5,7 @@ $m-dropdown-item--color-focus: $m-color--interactive-lightest !default;
 $m-dropdown-item--color-active: $m-color--interactive-lightest !default;
 
 .m-dropdown-item {
-    transition: background $m-transition ease;
+    transition: background $m-transition-duration ease;
     display: inline-block;
     width: 100%;
     padding: $m-padding;
