--- a/src/components/flex-template/flex-template.scss
+++ b/src/components/flex-template/flex-template.scss
@@ -40,7 +40,7 @@
         > .m-flex-template__corps {
             > .m-flex-template__menu-container {
                 > .m-flex-template__menu {
-                    transition: top $m-transition ease;
+                    transition: top $m-transition-duration--l ease-in-out;
                     max-height: 100vh;
                     overflow-y: auto;
                 }
@@ -58,7 +58,7 @@
         > .m-flex-template__corps {
             > .m-flex-template__menu-container,
             > .m-flex-template__page-container {
-                transition: width $m-transition ease-in-out;
+                transition: width $m-transition-duration--l ease-in-out;
             }
         }
     }
@@ -74,7 +74,7 @@
     }
 
     &__header {
-        transition: transform $m-transition ease;
+        transition: transform $m-transition-duration ease;
         position: relative;
         top: 0;
         right: 0;
@@ -183,7 +183,7 @@
             > .m-flex-template__corps {
                 > .m-flex-template__menu-container {
                     > .m-flex-template__menu {
-                        transition: transform $m-transition--l ease;
+                        transition: transform $m-transition-duration--l ease-in-out;
                     }
                 }
             }
