--- a/src/components/switch/switch.scss
+++ b/src/components/switch/switch.scss
@@ -81,7 +81,7 @@ $m-switch-size: 23px;
     }
 
     &__input {
-        transition: $m-transition ease-in-out;
+        transition: $m-transition-duration ease-in-out;
         background: $m-color--grey-light;
         border-radius: 2rem;
         border: $m-border-width--s solid $m-color--grey;
@@ -92,7 +92,7 @@ $m-switch-size: 23px;
     }
 
     &__button {
-        transition: $m-transition ease-in-out;
+        transition: $m-transition-duration ease-in-out;
         background: $m-color--white;
         border-radius: 2rem;
         border: $m-border-width--s solid $m-color--white;
@@ -106,7 +106,7 @@ $m-switch-size: 23px;
     }
 
     &__text {
-        transition: $m-transition ease-in-out;
+        transition: $m-transition-duration ease-in-out;
         display: flex;
         height: 100%;
         width: calc(100% - #{$m-switch-size});
@@ -123,7 +123,7 @@ $m-switch-size: 23px;
     }
 
     &__label {
-        transition: $m-transition color ease;
+        transition: $m-transition-duration color ease;
     }
 
     &__hidden {
