--- a/src/mixins/base-window/base-window.scss
+++ b/src/mixins/base-window/base-window.scss
@@ -48,7 +48,7 @@ $m-dialog--header-height: $m-touch-size !default;
 
             .m-base-window {
                 &__article {
-                    transition: transform $m-transition ease, opacity $m-transition--s linear;
+                    transition: transform $m-transition-duration ease, opacity $m-transition-duration--s linear;
                     margin-top: auto;
                     margin-bottom: auto;
                     transform: translate3d(0, $m-padding--l, 0);
@@ -199,7 +199,7 @@ $m-dialog--header-height: $m-touch-size !default;
                     }
 
                     @media screen and (min-width: #{$m-bp--min--s}) {
-                        transition: transform $m-transition ease, opacity $m-transition--s linear;
+                        transition: transform $m-transition-duration ease, opacity $m-transition-duration--s linear;
                         transform: translate3d(0, $m-padding--l, 0);
                         margin-top: auto;
                         margin-bottom: auto;
@@ -335,7 +335,7 @@ $m-dialog--header-height: $m-touch-size !default;
                 }
 
                 &__close-button {
-                    transition: background $m-transition ease;
+                    transition: background $m-transition-duration ease;
                     position: absolute;
                     top: 0;
                     right: 0;
