--- a/src/mixins/dropdown-template/dropdown-template.scss
+++ b/src/mixins/dropdown-template/dropdown-template.scss
@@ -61,7 +61,7 @@ $m-dropdown--margin: $m-padding--xs !default;
             &:not(.is-selected) {
                 .m-dropdown__list__element-text {
                     cursor: pointer;
-                    transition: background $m-transition ease;
+                    transition: background $m-transition-duration ease;
                 }
             }
 
@@ -79,7 +79,7 @@ $m-dropdown--margin: $m-padding--xs !default;
             }
 
             &-text {
-                transition: background $m-transition ease;
+                transition: background $m-transition-duration ease;
                 box-sizing: border-box;
                 display: inline-flex;
                 align-items: center;
