Update dropdown transition

--- a/src/components/dropdown/dropdown.html
+++ b/src/components/dropdown/dropdown.html
@@ -4,9 +4,9 @@
              :close-on-reference-click="!propEditable"
              :disabled="disabled"
              :open="propOpen"
-             :enter="animEnter"
-             :after-enter="animAfterEnter"
-             :leave="animLeave"
+             :enter="transitionEnter"
+             :after-enter="transitionAfterEnter"
+             :leave="transitionLeave"
              :padding-header="false"
              :padding-body="false"
              @open="openChanged(true)"
