--- a/src/components/tooltip/tooltip.scss
+++ b/src/components/tooltip/tooltip.scss
@@ -62,7 +62,7 @@ $m-tooltip--max-height: 280px !default;
 
     &__body {
         padding: $m-padding;
-        background: $m-color--interactive-lightest;
+        background: $m-color--information;
         box-shadow: rgba($m-color--black, 0.3) 0 1px 3px 0;
         border-radius: $m-border-radius--s;
 
