Update button size in tooltip and content-list-item

--- a/src/components/content-list-item/content-list-item.scss
+++ b/src/components/content-list-item/content-list-item.scss
@@ -34,6 +34,8 @@
             &.m-button.m-button {
                 min-width: auto;
                 min-height: auto;
+                width: $m-font-size;
+                height: $m-font-size;
             }
         }
     }
