--- a/src/components/scroll-top/scroll-top.scss
+++ b/src/components/scroll-top/scroll-top.scss
@@ -15,6 +15,8 @@
     background-color: $m-color--black-grey-dark;
     border: none;
     border-radius: $m-border-radius--s;
+    width: 28px;
+    height: 28px;
     opacity: 0.3;
     cursor: pointer;
 
