--- a/src/components/scroll-top/scroll-top.html
+++ b/src/components/scroll-top/scroll-top.html
@@ -1,5 +1,10 @@
-<button @click="onClick" class="m-scroll-top">
-    <m-icon name="arrow-right" width="16px" height="16px"></m-icon>
-    <m-i18n class="m-scroll-top__hidden" k="m-scroll-top:top"></m-i18n>
-</button>
+<transition name="m-scroll-top">
+    <div class="m-scroll-top" :class="{'m--is-relative': position == 'relative' }" v-if="visible">
+        <button @click="onClick" class="m-scroll-top__button">
+            <m-icon name="arrow-right" width="16px" height="16px"></m-icon>
+            <m-i18n class="m-scroll-top__hidden" k="m-scroll-top:top"></m-i18n>
+        </button>
+    </div>
+</transition>
+
 
