--- a/src/components/scroll-top/scroll-top.html
+++ b/src/components/scroll-top/scroll-top.html
@@ -1,17 +1,17 @@
 <div class="m-scroll-top" :class="{'m--is-relative': position == 'relative' }" :aria-hidden="!defaultTargetElVisible">
-    <template v-if="defaultTargetElVisible">
+    <div v-if="defaultTargetElVisible">
         <slot></slot>
         <div>
             <slot name="additionalContent"></slot>
-            <div :id="scrollTopId"></div>
+            <div :id="scrollTopId" v-if="defaultTargetElVisible"></div>
         </div>
-    </template>
+    </div>
     <portal :target-el="'#'+ getScrollTopId()" v-if="visible">
-        <!-- <transition name="m--is"> -->
-            <button @click="onClick" class="m-scroll-top__button">
+        <transition name="m--is">
+            <button @click="onClick" class="m-scroll-top__button" v-if="show">
                 <m-icon name="arrow-right" width="16px" height="16px"></m-icon>
                 <m-i18n class="m-scroll-top__hidden" k="m-scroll-top:top"></m-i18n>
             </button>
-        <!-- </transition> -->
+        </transition>
     </portal>
 </div>
