--- a/src/components/scroll-top/scroll-top.html
+++ b/src/components/scroll-top/scroll-top.html
@@ -10,7 +10,7 @@
     </div>
     <portal :target-el="'#'+ getScrollTopId()" v-if="visible">
         <transition name="m--is">
-            <button @click="onClick" class="m-scroll-top__button" :class="{'m--is-relative': position == 'relative' }" v-if="show">
+            <button ref="scrollButton" @click="onClick" class="m-scroll-top__button" :class="{'m--is-relative': position == 'relative' }" v-if="show">
                 <m-icon name="arrow-right" width="16px" height="16px"></m-icon>
                 <m-i18n class="m-scroll-top__hidden" k="m-scroll-top:top"></m-i18n>
             </button>
