--- a/src/components/scroll-top/scroll-top.html
+++ b/src/components/scroll-top/scroll-top.html
@@ -1,5 +1,5 @@
 <div class="m-scroll-top" :class="{'m--is-relative': position == 'relative' }" :aria-hidden="!defaultTargetElVisible">
-    <div v-show="defaultTargetElVisible">
+    <div v-if="defaultTargetElVisible">
         <slot></slot>
         <div class="m-scroll-top__wrap">
             <span class="m-scroll-top__wrap__slotContent" v-if="hasAdditionalContentSlot">
