--- a/src/components/datepicker/datepicker.html
+++ b/src/components/datepicker/datepicker.html
@@ -1,44 +1,47 @@
-<m-popup padding="" :open="isOpen" @open="isOpen = true" @close="isOpen = false" :options="options" :disabled="disabled">
+<div class="m-datepicker">
+    <m-popup :open="isOpen" @open="isOpen = true" @close="isOpen = false" :options="options" :disabled="isDisabled" :open-on-click="!isOpen">
 
-    <m-text-field icon-name="calendar" :force-focus="isOpen" @focus="openDatepicker" :value="formattedDate" @change="onChange"
-        :error="error" :placeholder="placeholder" :icon-description="isOpen ? closeCalendarDesc : openCalendarDesc"></m-text-field>
+        <m-text-field :label="label" :state="propState" @focus="openDatepicker" :force-focus="isOpen" :value="formattedDate" :placeholder="placeholder"
+            icon-name="calendar" :icon-description="isOpen ? closeCalendarDesc : openCalendarDesc"></m-text-field>
 
-    <div class="m-datepicker" slot="body">
-        <div class="m-datepicker__header">
-            <m-button mode="icon" icon-name="left-arrow" @click="selectYear(selectedDate.year - 1)" :state="isMinYear? 'disabled' : ''">previous year</m-button>
-            <button type="button" @click="view = 'year'" class="m-datepicker__years">{{selectedDate.year}}</button>
-            <m-button mode="icon" icon-name="right-arrow" @click="selectYear(selectedDate.year + 1)" :state="isMaxYear? 'disabled' : ''">next year</m-button>
-            <m-button mode="icon" icon-name="left-arrow" @click="changeMonth(-1)" :state="isMinMonth? 'disabled' : ''">previous month</m-button>
-            <button type="button" @click="view = 'month'" class="m-datepicker__months">{{monthName}}</button>
-            <m-button mode="icon" icon-name="right-arrow" @click="changeMonth(1)" :state="isMaxMonth? 'disabled' : ''">next month</m-button>
+        <div class="m-datepicker__target" slot="body">
+            <div class="m-datepicker__header">
+                <m-button mode="icon" icon-name="left-arrow" @click="selectYear(selectedDate.year - 1)" :state="isMinYear? 'disabled' : ''">previous year</m-button>
+                <button type="button" @click="view = 'year'" class="m-datepicker__years">{{selectedDate.year}}</button>
+                <m-button mode="icon" icon-name="right-arrow" @click="selectYear(selectedDate.year + 1)" :state="isMaxYear? 'disabled' : ''">next year</m-button>
+                <m-button mode="icon" icon-name="left-arrow" @click="changeMonth(-1)" :state="isMinMonth? 'disabled' : ''">previous month</m-button>
+                <button type="button" @click="view = 'month'" class="m-datepicker__months">{{monthName}}</button>
+                <m-button mode="icon" icon-name="right-arrow" @click="changeMonth(1)" :state="isMaxMonth? 'disabled' : ''">next month</m-button>
+            </div>
+            <div class="m-datepicker__body">
+                <table v-if="view == 'year'" class="m-datepicker__body-table">
+                    <tr v-for="yearRow in yearRows">
+                        <td v-for="y in yearRow" class="m-datepicker__body-cell">
+                            <button type="button" @click.stop="selectYear(y, true)" :class="{'m--is-selected': selectedDate.year == y}" class="m-datepicker__item">{{y}}</button>
+                        </td>
+                    </tr>
+                </table>
+                <table v-if="view == 'month'">
+                    <tr v-for="monthRow in monthRows">
+                        <td v-for="m in monthRow" class="m-datepicker__body-cell">
+                            <button type="button" @click.stop="selectMonth(m.index)" :class="{'m--is-selected': monthName == m.name, 'm--is-disabled': m.isDisabled}"
+                                class="m-datepicker__item" :disabled="m.isDisabled">{{m.name}}</button>
+                        </td>
+                    </tr>
+                </table>
+                <table v-if="view == 'day'">
+                    <tr>
+                        <td v-for="w in weekdays" class="m-datepicker__weekday">{{w}}</td>
+                    </tr>
+                    <tr v-for="dayRow in dayRows">
+                        <td v-for="d in dayRow" class="m-datepicker__body-cell">
+                            <button type="button" @click="selectDate(d)" :class="{'m--is-selected': isSelectedDate(d), 'm--is-disabled': d.isDisabled, 'm--is-other-month': d.month != selectedDate.month}"
+                                class="m-datepicker__item">{{d.day}}</button>
+                        </td>
+                    </tr>
+                </table>
+            </div>
         </div>
-        <div class="m-datepicker__body">
-            <table v-if="view == 'year'" class="m-datepicker__body-table">
-                <tr v-for="yearRow in yearRows">
-                    <td v-for="y in yearRow" class="m-datepicker__body-cell">
-                        <button type="button" @click.stop="selectYear(y, true)" :class="{'m--is-selected': selectedDate.year == y}" class="m-datepicker__item">{{y}}</button>
-                    </td>
-                </tr>
-            </table>
-            <table v-if="view == 'month'">
-                <tr v-for="monthRow in monthRows">
-                    <td v-for="m in monthRow" class="m-datepicker__body-cell">
-                        <button type="button" @click.stop="selectMonth(m.index)" :class="{'m--is-selected': monthName == m.name, 'm--is-disabled': m.isDisabled}"
-                            class="m-datepicker__item" :disabled="m.isDisabled">{{m.name}}</button>
-                    </td>
-                </tr>
-            </table>
-            <table v-if="view == 'day'">
-                <tr>
-                    <td v-for="w in weekdays" class="m-datepicker__weekday">{{w}}</td>
-                </tr>
-                <tr v-for="dayRow in dayRows">
-                    <td v-for="d in dayRow" class="m-datepicker__body-cell">
-                        <button type="button" @click="selectDate(d)" :class="{'m--is-selected': isSelectedDate(d), 'm--is-disabled': d.isDisabled, 'm--is-other-month': d.month != selectedDate.month}"
-                            class="m-datepicker__item">{{d.day}}</button>
-                    </td>
-                </tr>
-            </table>
-        </div>
-    </div>
-</m-popup>
+    </m-popup>
+    <m-validation-message :error-message="errorMessage" :valid-message="validMessage" :helper-message="helperMessage" v-if="!isDisabled"></m-validation-message>
+</div>
