--- a/src/components/input-style/input-style.scss
+++ b/src/components/input-style/input-style.scss
@@ -4,6 +4,7 @@ $m-input-style--color-focus: $m-color--interactive !default;
 $m-input-style--color-error: $m-color--error !default;
 $m-input-style--color-valid: $m-color--success !default;
 $m-input-style--color-disabled: $m-color--grey-darker !default;
+$m-input-style--color-waiting: $m-color--active !default;
 $m-input-style--padding: 5px !default;
 
 .m-input-style {
@@ -39,7 +40,7 @@ $m-input-style--padding: 5px !default;
         background: $m-input-style--color-focus;
     }
 
-    &:hover:not(.m--is-disabled):not(.m--has-error):not(.m--is-valid),
+    &:hover:not(.m--is-disabled):not(.m--has-error):not(.m--is-valid):not(.m--is-focus),
     &.m--has-value {
         &::before {
             border-color: $m-color--text;
@@ -88,7 +89,7 @@ $m-input-style--padding: 5px !default;
     }
 
     &:not(.m--is-label-up) {
-        .m-input-style__body__left {
+        &.m--has-label .m-input-style__body__left {
             opacity: 0;
         }
     }
@@ -158,6 +159,21 @@ $m-input-style--padding: 5px !default;
         }
     }
 
+    &.m--is-waiting {
+        &,
+        .m-input-style__label,
+        .m-input-style__body,
+        .m-input-style__body__left,
+        .m-input-style__body__right,
+        .m-input-style__body input,
+        .m-input-style__body div,
+        .m-input-style__body span,
+        .m-button.m--is-mode-icon,
+        .m-icon.m-icon {
+            cursor: wait;
+        }
+    }
+
     &__label {
         transition-property: color, top, bottom, transform, font-size;
         transition-duration: $m-transition-duration--l;
@@ -176,10 +192,11 @@ $m-input-style--padding: 5px !default;
         z-index: 1;
         display: flex;
         align-items: center;
+        flex: 1 1 auto;
+        width: 100%;
         padding: 0 0 $m-input-style--padding 0;
         font-weight: $m-font-weight;
         text-decoration: none;
-        flex: 1 1 auto;
 
         &,
         div,
@@ -198,6 +215,10 @@ $m-input-style--padding: 5px !default;
             border: none;
             background: none;
             cursor: text;
+
+            &[type=password] {
+                letter-spacing: 2px;
+            }
         }
 
         &__left {
@@ -215,7 +236,7 @@ $m-input-style--padding: 5px !default;
         }
 
         .m-button.m--is-mode-icon,
-        .m-icon.m-icon {
+        :not(.m-input-style__disabled-icon).m-icon {
             position: relative;
             z-index: 0;
             font-size: 16px;
@@ -227,13 +248,13 @@ $m-input-style--padding: 5px !default;
             min-height: auto;
         }
 
-        .m-icon.m-icon {
+        :not(.m-input-style__disabled-icon).m-icon {
             transition: color 0.3s ease;
         }
     }
 
     &__disabled-icon {
-        transition: font-size $m-transition-duration--l ease, stroke-width $m-transition-duration--l ease;
+        transition: all $m-transition-duration--l ease;
         z-index: 1;
         display: inline-block;
         stroke-width: 2px;
