--- a/src/mixins/base-window/base-window.scss
+++ b/src/mixins/base-window/base-window.scss
@@ -105,24 +105,6 @@ $m-dialog--header-height: $m-touch-size !default;
                 &__header {
                     position: relative;
                     min-height: $m-dialog--header-height;
-                    padding-right: $m-touch-size;
-
-                    &__close-button {
-                        position: absolute;
-                        top: 50%;
-                        right: 0;
-                        margin: 0;
-                        transform: translate3d(0, -50%, 0);
-                        stroke-width: 2px;
-
-                        &:hover {
-                            color: $m-color--white;
-                        }
-
-                        &::after {
-                            background: $m-color--black-grey-light;
-                        }
-                    }
                 }
 
                 &__body {
@@ -217,7 +199,6 @@ $m-dialog--header-height: $m-touch-size !default;
                     background: $m-color--black-grey;
                     color: $m-color--white;
                     min-height: $m-dialog--header-height;
-                    padding-right: $m-touch-size;
 
                     h2 {
                         margin: 0;
@@ -329,10 +310,6 @@ $m-dialog--header-height: $m-touch-size !default;
                 &__header {
                     display: block;
                     border-bottom: 1px solid $m-color--grey-light;
-
-                    &__close-button {
-                        color: $m-color--black-grey-light;
-                    }
                 }
 
                 &__close-button {
@@ -396,6 +373,19 @@ $m-dialog--header-height: $m-touch-size !default;
         align-items: center;
         width: 100%;
         padding: $m-margin $m-padding;
+
+        &.m--has-close-button {
+            padding-right: $m-touch-size;
+        }
+
+        &__close-button {
+            position: absolute;
+            top: 50%;
+            right: 0;
+            margin: 0;
+            transform: translate3d(0, -50%, 0);
+            stroke-width: 2px;
+        }
     }
 
     &__body {
